--- a/css/style.css
+++ b/css/style.css
@@ -778,3 +778,8 @@ h1, h2, h3, h4, h5,
   width: 40px;
   height: 40px;
   line-height: 40px; }
+
+.Uc2NEf {
+  background-color: white;
+  border-radius: 5px;
+}
