--- a/css/style.css
+++ b/css/style.css
@@ -779,7 +779,7 @@ h1, h2, h3, h4, h5,
   height: 40px;
   line-height: 40px; }
 
-.Uc2NEf {
+.order-background {
   background-color: white;
   border-radius: 5px;
 }
