update for mobile version name

--- a/css/style.css
+++ b/css/style.css
@@ -312,3 +312,9 @@ div.title::after {
     }
 
 }
+
+@media only screen and (max-width: 390) {
+    .header .header-wrapper .main-info .name {
+        font-size: 26px;
+    }
+}
